# tiralabra-regex

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: workflow.yml
dokumentaatio/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/imgs/: compiling.drawio  matching.drawio
src/: dfa.py  main.py  nfa.py  node.py  parser.py  performance_test.py  props.py  rabin_scott.py  rules.py  thompson.py  utils.py
src/algorithms/: parser.py  rabin_scott.py  thompson.py
src/entities/: dfa.py  nfa.py  node.py
src/tests/: dfa_test.py  nfa_test.py  parser_test.py  rabin_scott_test.py  thompson_test.py
src/tests/integration_tests/: compile_and_match_test.py
src/tests/unit_tests/: dfa_test.py  nfa_test.py  node_test.py  parser_test.py  rabin_scott_test.py  thompson_test.py
viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
