[tool.poetry]
name = "tiralabra-regex"
version = "0.1.0"
description = ""
authors = ["Simo Kettunen <simo.kettunen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.1"
pylint = "^2.11.1"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
